--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <div style="text-align: center">
 <h1> Welcome to Top Billed</h1>
        <p> This game was developed though creating a MySQL database through an API request pipeline.</p>
-       <p> Thank to the The Movie Database for providing the dats used to fill my database</p>
+       <p> Thank you to <a href="https://www.themoviedb.org/?language=en-US">The Movie Database</a> for providing the data used to fill my database</p>
 </div>
        <div class="content", style="text-align: center">
        <form action="/" method="post">
